--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,21 @@
     justify-content: center;
 }
 
+#data-controls {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    top: 0px;
+    left: 0px;
+    width: 500px;
+    height: auto;
+    margin: 10px;
+
+    > * {
+        margin: 10px;
+    }
+}
+
 .body {
     margin: 20px;
     padding: 20px;
